src/css/scss/components/custom/_featured-testimonial.scss
.ntg-featured-testimonial {
    $this: &;
    color: $white;
    position: relative;

    &__background {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;

        &::after {
            content: '';
            background: linear-gradient(to right, rgba($black, 0.5), transparent);
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
        }

        img,
        video {
            object-fit: cover;
            width: 100%;
            height: 100%;
        }

        .video-control {
            position: absolute;
            bottom: 20px;
            right: 20px;
            z-index: 1;
        }

        &:not(:has(img, video)) {
            background-color: var(--current-theme-primary, $primary);
            color: var(--current-theme-primary-text, $primary-text);
        }
    }

    &__content {
        position: relative;
        width: 100%;
        height: 100%;

        > .container > * {
            @include media-breakpoint-up(lg) {
                max-width: calc(100% * (2 / 3));
            }

            @include media-breakpoint-up(xl) {
                max-width: 50%;
            }
        }

        p {
            @include media-breakpoint-down(lg) {
                margin-bottom: 0.75rem;
            }
        }

        blockquote {
            @include font-size($h4-font-size);
            padding-left: calc(1rem + 32px);
            position: relative;
            border-left: none;
            margin-left: 0;

            @include media-breakpoint-down(lg) {
                margin-bottom: 0.75rem;
            }

            &::before {
                @extend .fa;
                content: '\f10d';
                color: $white;
                font-weight: 700 !important;
                position: absolute;
                top: 0;
                left: 0;
            }
        }
    }

    &.full-screen {
        height: 100vh;

        #{$this}__content {
            .container {
                height: 100%;
                display: flex;
                justify-content: center;
                flex-direction: column;
            }

            blockquote {
                @include font-size($h3-font-size);
                padding-left: calc(1rem + 40px);
            }

            .btn {
                align-self: flex-start;
            }
        }
    }
}

